--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
           icon: player_emoji
           }); 
 
+        console.log(old_position);
       
       if(navigator.geolocation) {
         navigator.geolocation.watchPosition(set_my_position);
