--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             center: { lat: -37.672162, lng: 145.029302 }
         });
 
-        var old_position = new google.maps.Marker({
+        old_position = new google.maps.Marker({
           position: {lat: -37.672162, lng: 145.029302 },
           map: zombie_map,
           icon: player_emoji
