--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           
     var all_markers=[];
     var data = `-37.67143167629509 145.02844369311524 https://cdn.glitch.global/fc3a5f45-0214-43fd-ba2a-2e0bd9dbce2f/zombie.png?v=1659486545789 Z-ONE
-    -37.672178984186694 145.02854025263977 zombie.png Z-TWO
+    -37.672178984186694 145.02854025263977 Candy4.png CANDY-ONE
     -37.67133826227949 145.0291410674591 https://cdn.glitch.global/fc3a5f45-0214-43fd-ba2a-2e0bd9dbce2f/hospital.png?v=1659486535213 HOSP-ONE
     -37.671624 145.030439 https://cdn.glitch.global/fc3a5f45-0214-43fd-ba2a-2e0bd9dbce2f/zombie.png?v=1659486545789 Z-THREE
     -37.6720897 145.030500 https://cdn.glitch.global/fc3a5f45-0214-43fd-ba2a-2e0bd9dbce2f/hospital.png?v=1659486535213 HOSP-TWO`;
@@ -99,7 +99,7 @@
           var what_found = all_markers[i].getTitle();
           alert("Found it! " + what_found);
           all_markers[i].setMap(null);
-          if (what_found in ('Z-ONE','Z-TWO','Z-THREE')) {
+          if (what_found in ('Z-ONE','Z-TWO','Z-THREE','CANDY-ONE')) {
             score += 10;
           }
           else {
