--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           
     var all_markers=[];
     var data = `-37.67143167629509 145.02844369311524 https://cdn.glitch.global/fc3a5f45-0214-43fd-ba2a-2e0bd9dbce2f/zombie.png?v=1659486545789 Z-ONE
-    -37.672178984186694 145.02854025263977 Candy4.png CANDY-ONE
+    -37.672178984186694 145.02854025263977 Candy.png CANDY-ONE
     -37.67133826227949 145.0291410674591 https://cdn.glitch.global/fc3a5f45-0214-43fd-ba2a-2e0bd9dbce2f/hospital.png?v=1659486535213 HOSP-ONE
     -37.671624 145.030439 https://cdn.glitch.global/fc3a5f45-0214-43fd-ba2a-2e0bd9dbce2f/zombie.png?v=1659486545789 Z-THREE
     -37.6720897 145.030500 https://cdn.glitch.global/fc3a5f45-0214-43fd-ba2a-2e0bd9dbce2f/hospital.png?v=1659486535213 HOSP-TWO`;
